fix(spacing): add spacing styles

--- a/src/GlobalStyles/GlobalStyles.scss
+++ b/src/GlobalStyles/GlobalStyles.scss
@@ -49,6 +49,14 @@
   --shadow-regular: 0px 0px 8px 0px rgba(61, 60, 59, 0.12);
   --shadow-deep: 0px 0px 16px 0px rgba(61, 60, 59, 0.15);
 
+  --spacing-xxsmall: 0.8rem;
+  --spacing-xsmall: 1.6rem;
+  --spacing-small: 2.4rem;
+  --spacing-medium: 3.2rem;
+  --spacing-large: 4rem;
+  --spacing-xlarge: 4.8rem;
+  --spacing-xxlarge: 6.4rem;
+
   --corner-xsmall: 0.4rem;
   --corner-small: 0.8rem;
   --corner-medium: 1.2rem;
